# ai-judge

./: .gitignore  CONTRIBUTING.md  Dockerfile  Install-AI-Judge.command  LICENSE  Publish-AI-Judge-V3.command  README.md  RELEASE_V3.md  RELEASE_V3_2.md  RELEASE_V3_3.md  RELEASE_V3_5.md  RELEASE_V3_5_1.md  RELEASE_V3_6.md  RELEASE_V3_7.md  RELEASE_V3_8.md  RELEASE_v2.md  Record-AI-Judge-Demo.command  Record-Microsoft-Agent-Academy.command  SECURITY.md  SKILL.md  docker-compose.yml  harness-report.html  publish.sh  pyproject.toml  release.sh
.github/: FUNDING.yml
assets/: AIJudgeIcon.icns
bridges/: __init__.py  chrome_cdp_bridge.py  chrome_fixed_tab_bridge.py  doubao_desktop_controller.swift  feishu_bot.py  gemini_desktop_controller.swift  notification_gateway.py  qwen_desktop_controller.swift  web_seat_bridge.py
citation-bench/: citation-bench-100.jsonl  citation-bench-50-manifest.json  citation-bench-hard-10.jsonl  citation-bench-hard-11.jsonl
cli/: ask.py  main.py
core/: __init__.py  achievement.py  agent_trace_audit.py  anchor_engine.py  answer_certification.py  async_task_manager.py  auto_jury.py  blind_cross_validation.py  citation_audit.py  citation_batch.py  citation_validator.py  claim_support.py  closeout_sop.py  cognitive_skills.py  cold_start.py  consensus_v2.py  cross_temporal_analysis.py  determinism.py  dissent.py  eval_dataset.py  eval_metrics.py  evidence.py  evidence_broker.py  evidence_gap_filler.py  evidence_gap_queue.py  evidence_trace.py  execution_drivers.py  final_report.py  formula_engine.py  grand_judge.py  hard_truth.py  hermes_memory.py  hermes_output.py  html_export.py  human_review.py  license_validator.py  mcp_server.py  mirror.py  modes.py  neuro_profiler.py  (+12 more)
desktop/: AIJudgeDesktop.swift
docs/: AI_COLLECTIVE_BLIND_SPOTS_BLOG.md  AI_COLLECTIVE_BLIND_SPOTS_BLOG_OUTLINE.md  AI_DECISION_AUDIT_SAMPLE.md  AI_JUDGE_GROWTH_PLAYBOOK.md  ARCHITECTURE.md  ARC_AGENT_TRACE_AUDIT.md  BATCH_AUDIT_SPEC.md  CITATION_AUDIT_QUICKSTART.md  CLAIM_SPAN_ROADMAP.md  CLAIM_SUPPORT_AUDIT_SPEC.md  COMPARISON.md  DESKTOP_AND_WEB_BRIDGE.md  DOCUMENT_PARSER_ROADMAP.md  EVAL4SD_2026_SOURCE_ISOLATED_CITATION_AUDIT_DRAFT.md  GITHUB_ACTION_CITATION_AUDIT.md  GITHUB_SPONSORS.md  HUMAN_CENTRIC.md  LAUNCH_CITATION_AUDIT.md  LAUNCH_DEMO_KIT.md  MICROSOFT_AGENT_ACADEMY.md  PAPER_SEED_SOURCE_ISOLATED_CITATION_AUDIT.md  PRE_ATTESTATION_RECEIPT_SCHEMA.md  PRODUCTION_EVALUATION_FIDELITY_APPENDIX.md  PROMOTION_KIT.md  PRO_AUTOMATION.md  PRO_EARLY_ACCESS.md  QUICKSTART.md  RECORDING_GUIDE.md  TRY_AI_JUDGE_IN_3_MINUTES.md  UNVERIFIABLE_IS_NOT_FALSE.md
examples/: agent-trace-demo.json  agent-trace-partial.json  agent-trace-supported.json  agent-trace-verdict.md  fake-citation.md  legal-memo-contradicted.md  opensource-readme-irrelevant.md  product-no-evidence.md  real-source-overclaimed-absolute.md  real-source-overclaimed-causation.md  real-source-overclaimed-quantified.md  sounds-smart-low-judgment.md  verdict_report_demo.html
frontend/: package.json
growth/: 30_day_autopilot_execution.md  30_day_remaining_audit.md  ai_judge_web_run_ddb4902f3369_summary.md  anonymized_audit_permission_request.md  arc_agent_eval_community_pack_2026-05-20.md  automation_completion_status_2026-05-20.md  automation_run_2026-05-20_post_miracleplus.md  codex_autopilot_template.md  commercialization_offers_2026-05-20.md  compressed_30_day_execution.md  day30_decision.md  day7_fastlane_completion_2026-05-19.md  email_deliverability_fix_2026-05-20.md  email_sequence.md  external_action_queue_2026-05-20.md  feedback_log.md  followup_queue.md  free_audit_intake.md  free_audit_offer.md  free_audit_slots.json  free_audit_status.md  full_channel_web_council_plan_2026-05-19.md  github_issue_queue.md  github_star_sprint_7_30_2026-05-20.md  huggingface_community_post.md  launch_posts.md  metrics_dashboard.md  mimo_100t_application_draft_2026-05-20.md  miracleplus_5_slide_pitch_deck_2026-05-20.md  miracleplus_application_critique_2026-05-21.md  miracleplus_application_form_map_2026-05-20.md  miracleplus_application_pack_2026-05-20.md  openreview_login_support_draft.md  outreach_batch_001.json  outreach_batch_001.md  outreach_batch_002_2026-05-20.md  outreach_batch_002_events.jsonl  outreach_events.jsonl  outreach_mailto_links.md  (+24 more)
rust-engine/: Cargo.toml
rust-engine/src/: lib.rs  main.rs
rust-engine/src/council/: claim_ledger.rs  council.rs  mod.rs
rust-engine/src/engine/: confidence.rs  dissent.rs  evidence.rs  mod.rs  orchestrator.rs  reasoning_tracer.rs  risk_router.rs
rust-engine/src/engine/tools/: base_tool.rs  mod.rs
(+153 files in other folders)
