[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-judge"
version = "2.0.0"
description = "Multi-model AI jury system — 9 models deliberate, you hold the gavel"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [{name = "AI Judge Contributors"}]
keywords = ["ai", "jury", "multi-model", "verdict", "cross-validation", "llm", "audit", "council"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
ai-judge = "cli.main:main"

[project.urls]
Homepage = "https://github.com/reguorier/ai-judge"
Repository = "https://github.com/reguorier/ai-judge"
Issues = "https://github.com/reguorier/ai-judge/issues"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core"]

[tool.ruff]
line-length = 120
target-version = "py311"
