[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-judge"
version = "3.1.0"
description = "Local-first AI jury skill with scoring, hard truth mode, and cognitive proxy signals"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [{name = "AI Judge Contributors"}]
keywords = ["ai", "jury", "multi-model", "verdict", "cross-validation", "llm", "audit", "council", "codex-skill", "scoring", "hard-truth", "cognitive-proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
ai-judge = "cli.main:main"

[project.urls]
Homepage = "https://github.com/reguorider-gif/ai-judge"
Repository = "https://github.com/reguorider-gif/ai-judge"
Issues = "https://github.com/reguorider-gif/ai-judge/issues"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core"]

[tool.ruff]
line-length = 120
target-version = "py311"
