[package]
name = "ai-judge-engine"
version = "3.2.0"
edition = "2021"
description = "AI Judge Engine - Auditable Jury Architecture with Evidence, Confidence, Dissent, and Reasoning Trace"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
async-trait = "0.1"

[lib]
name = "ai_judge_engine"
path = "src/lib.rs"

[[bin]]
name = "ai-judge"
path = "src/main.rs"
